--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jitcall-jesusC",
+  "name": "jitcall-jesusc",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -17,6 +17,7 @@
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
+    "@angular/fire": "^19.1.0",
     "@angular/forms": "^19.0.0",
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
@@ -26,7 +27,10 @@
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/status-bar": "7.0.1",
+    "@firebase/app-compat": "^0.2.53",
+    "@firebase/firestore-compat": "^0.3.45",
     "@ionic/angular": "^8.0.0",
+    "firebase": "^11.6.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
