--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "ng lint"
   },
   "private": true,
-  "dependencies": {
+    "dependencies": {
     "@angular/animations": "^19.0.0",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
@@ -26,22 +26,18 @@
     "@capacitor/android": "^7.2.0",
     "@capacitor/app": "7.0.1",
     "@capacitor/camera": "^7.0.1",
-    "@capacitor/core": "^7.2.0",
+    "@capacitor/core": "7.2.0",
     "@capacitor/geolocation": "^7.1.2",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/push-notifications": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
-    "@firebase/app-compat": "^0.2.53",
-    "@firebase/firestore-compat": "^0.3.45",
     "@ionic/angular": "^8.0.0",
-    "@mapbox/point-geometry": "^1.1.0",
     "@supabase/supabase-js": "^2.49.8",
     "capacitor-voice-recorder": "^7.0.5",
     "firebase": "^11.6.0",
     "ionicons": "^7.0.0",
     "mapbox-gl": "^3.12.0",
-    "pbf": "^4.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "uuid": "^11.1.0",
@@ -57,10 +53,9 @@
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/language-service": "^19.0.0",
-    "@capacitor/cli": "^7.2.0",
+    "@capacitor/cli": "7.2.0",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
-    "@types/pbf": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
